k8s/apps/kuard/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
  namespace: default
  labels:
    app: kuard
    access: private
spec:
  selector:
    app: kuard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
